--- a/frontend/src/assets/palette/palette.scss
+++ b/frontend/src/assets/palette/palette.scss
@@ -1,25 +1,38 @@
+$light-bg: rgb(250, 250, 251);
+$dark-bg: rgb(18, 18, 18);
+
+$light-text: black;
+$dark-text: white;
+$light-text-secondary: rgb(35, 35, 35);
+$dark-text-secondary: rgb(240, 240, 240);
+
+$light-primary: rgb(102, 0, 153);
+$dark-primary: rgb(153, 50, 204);
+
 $themes: (
   light: (
     //text
+    text: $light-text,
+    text-secondary: $light-text-secondary,
+    //background
+    bg: $light-bg,
     //General
-    primary: #e3f2fd,
-    secondary: #f3e5f5,
+    primary: $light-primary,
     error: #e57373,
     warning: #ffb74d,
-    info: #4fc3f7,
     success: #81c784,
-    grays: #adb5bd,
   ),
   dark: (
     //text
+    text: $dark-text,
+    text-secondary: $dark-text-secondary,
+    //background
+    bg: $dark-bg,
     //General
-    primary: #42a5f5,
-    secondary: #ab47bc,
+    primary: $dark-primary,
     error: #d32f2f,
     warning: #f57c00,
-    info: #0288d1,
     success: #388e3c,
-    grays: #6c757d,
   ),
 ) !default;
 
