--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -1,12 +1,17 @@
 @import "./palette/palette.scss";
 @import "./components/container.scss";
 .root {
-  height: 100vh;
+  min-height: 100vh;
   @include themify($themes) {
     background-color: themed("bg");
   }
   &__container {
     margin: auto;
     @include container-widths;
+  }
+}
+@media screen and (max-width: 576px) {
+  * {
+    font-size: 8px;
   }
 }
