--- a/frontend/src/assets/layout/header.scss
+++ b/frontend/src/assets/layout/header.scss
@@ -66,6 +66,32 @@
           color: themed("text-secondary");
         }
       }
+      &__avatar {
+        width: 2.4rem !important;
+        height: 2.4rem !important;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .app-header {
+    &__left {
+      &__company-name {
+        font-size: 1.4rem;
+        font-weight: bold;
+      }
+    }
+    &__right {
+      gap: 2px;
+      &__btn {
+        padding: 0px !important;
+        gap: 2px;
+        &__avatar {
+          width: 2rem !important;
+          height: 2rem !important;
+        }
+      }
     }
   }
 }
